--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <section id="about" class="card">
       <h3>About</h3>
-      <p class="small">I work on trustworthy and optimization-driven machine learning for intelligent transportation systems (ITS), focusing on <strong>machine unlearning</strong>, <strong>data poisoning</strong>, <strong>variational inequalities</strong>, and <strong>PINNs</strong>. My work spans theory (DIF, set-valued sensitivity), algorithms, and applied spatiotemporal forecasting.</p>
+      <p class="small">I work on trustworthy and optimization-driven machine learning for intelligent transportation systems (ITS), focusing on <strong>machine unlearning</strong>, <strong>data poisoning</strong>, <strong>variational inequalities</strong>, and <strong>PINNs</strong>. My work spans theory (Influence function, set-valued sensitivity), algorithms, and applied spatiotemporal forecasting.</p>
     </section>
 
     <section id="interests" class="grid">
