--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="avatar" aria-hidden="true">XW</div>
+      <img src="bio.jpeg" alt="Xin Wang" class="avatar">
       <div class="title">
         <h1>Xin Wang</h1>
         <h2>Ph.D. Student, Transportation Engineering — University of Washington</h2>
         <div class="pillbar">
           <a class="pill" href="mailto:xinw22@uw.edu" title="Email"><svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6"><path d="M4 4h16v16H4z"/><path d="m22 6-10 7L2 6"/></svg> xinw22@uw.edu</a>
           <a class="pill" href="https://scholar.google.com/citations?user=eNRwi3QAAAAJ" target="_blank" rel="noopener">📖 Google Scholar</a>
-          <a class="pill" href="#cv" title="Scroll to CV">📝 CV (on this page)</a>
+          <a class="pill" href="CV_Xin.pdf" target="_blank" rel="noopener">📄 Download CV</a>
         </div>
       </div>
     </header>
