--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     a:hover{text-decoration:underline}
     .wrap{max-width:1050px;margin:0 auto;padding:28px 18px 80px}
     header{display:grid;grid-template-columns:120px 1fr;gap:18px;align-items:center;margin:12px 0 26px}
-    .avatar{width:120px;height:120px;border-radius:18px;background:#1b1e26;display:flex;align-items:center;justify-content:center;font-weight:700;color:#9fb4ff;border:1px solid #222}
+    .avatar {width: 120px;height: 120px;border-radius: 50%;border: 1px solid #222;object-fit: cover}
     .title h1{margin:0;font-weight:800;letter-spacing:.2px}
     .title h2{margin:6px 0 10px;font-weight:500;color:var(--muted)}
     .pillbar{display:flex;flex-wrap:wrap;gap:10px}
