--- a/index.html
+++ b/index.html
@@ -59,9 +59,25 @@
       </div>
     </header>
 
+    <!-- About 部分替换 -->
     <section id="about" class="card">
       <h3>About</h3>
-      <p class="small">I work on trustworthy and optimization-driven machine learning for intelligent transportation systems (ITS), focusing on <strong>machine unlearning</strong>, <strong>data poisoning</strong>, <strong>variational inequalities</strong>, and <strong>PINNs</strong>. My work spans theory (influence function, set-to-set stability), algorithms, and applied spatiotemporal forecasting.</p>
+      <p class="small">
+        I study <strong>AI fundamentals</strong> for reliable and scalable machine learning. 
+        My research focuses on <strong>set-to-set stability</strong> in deep neural networks, 
+        <strong>machine unlearning</strong> through variational inequalities, and 
+        <strong>adversarial robustness</strong> with an emphasis on transferability. 
+        These directions address <em>core technologies</em> in optimization and trustworthiness, 
+        with applications to spatiotemporal forecasting and intelligent transportation systems.
+      </p>
+      <div class="row" style="margin-top:8px">
+        <span class="tag badge-ai">AI Stability</span>
+        <span class="tag badge-ai">Machine Unlearning</span>
+        <span class="tag badge-ai">Adversarial Robustness</span>
+        <span class="tag badge-ai">Variational Inequalities</span>
+        <span class="tag badge-ai">Scalable Optimization</span>
+        <span class="tag badge-app">Trustworthy ITS</span>
+      </div>
     </section>
 
     <!-- Research Focus: AI & Transportation -->
