--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <li><span class="tag badge-ai">AI</span></li>
         <li>
           <strong>Set-Valued Sensitivity Analysis of Deep Neural Networks</strong>
-          <a href="https://ojs.aaai.org/index.php/AAAI/article/view/31087" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+          <a href="https://arxiv.org/abs/2412.11057" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
           <u>Xin Wang</u>, Feilong Wang, Xuegang Jeff Ban. AAAI 2025, 39(20): 21304–21311.
         </li>
         <li>
@@ -232,17 +232,17 @@
         <li><span class="tag badge-app">Transportation</span></li>
         <li>
           <strong>Data poisoning attacks on traffic state estimation and prediction</strong>
-          <a href="https://doi.org/10.1016/j.trc.2024.104577" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+          <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24000986" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
           Wang, Feilong, <u>Xin Wang</u>, Hong, Yuan, Rockafellar, R. Tyrrell, Ban, Xuegang Jeff. Transportation Research Part C, 168 (2024): 104577.
         </li>
         <li>
           <strong>Data poisoning attacks in intelligent transportation systems: A survey</strong>
-          <a href="https://doi.org/10.1016/j.trc.2024.104750" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+          <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24002717" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
           Wang, Feilong, <u>Xin Wang</u>, Ban, Xuegang Jeff. Transportation Research Part C, 165 (2024): 104750.
         </li>
         <li>
           <strong>Infrastructure-enabled Defense Methods against Data Poisoning Attacks on Traffic State Estimation and Prediction</strong>
-          <a href="https://doi.org/10.1016/j.trc.2025.104800" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4395716">Paper</span></a><br>
           Feilong Wang, <u>Xin Wang</u>, Jeff Ban. TRC-30, 2025.
         </li>
         <li>
