--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
         </li>
         <li>
           <strong>Infrastructure-enabled Defense Methods against Data Poisoning Attacks on Traffic State Estimation and Prediction</strong>
-          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4395716">Paper</span></a><br>
-          Feilong Wang, <u>Xin Wang</u>, Jeff Ban. TRC-30, 2025.
+          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4395716" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br><u>Xin Wang</u>, Jeff Ban. TRC-30, 2025.
         </li>
         <li>
           <strong>Transferability in Data Poisoning Attacks on Spatiotemporal Traffic Forecasting Models</strong>
