--- a/index.html
+++ b/index.html
@@ -216,38 +216,38 @@
         <li>
           <strong>Set-Valued Sensitivity Analysis of Deep Neural Networks</strong>
           <a href="https://arxiv.org/abs/2412.11057" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, Feilong Wang, Xuegang Jeff Ban. AAAI 2025, 39(20): 21304–21311.
+          <u>Xin Wang</u>, Feilong Wang, Xuegang(Jeff) Ban. AAAI 2025, 39(20): 21304–21311.
         </li>
         <li>
           <strong>Machine Unlearning of Traffic State Estimation and Prediction</strong>
           <a href="https://arxiv.org/abs/2507.17984" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, R. Tyrrell Rockafellar, et al. arXiv:2507.17984 (2025). Submitted to ISTTT.
+          <u>Xin Wang</u>, R. Tyrrell Rockafellar, Xuegang(Jeff) Ban. arXiv:2507.17984 (2025). Submitted to ISTTT.
         </li>
         <li>
           <strong>Model-Targeted Data Poisoning Attacks against ITS Applications with Provable Convergence</strong>
           <a href="https://arxiv.org/abs/2505.03966" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, Feilong Wang, Yuan Hong, R. Tyrrell Rockafellar, et al. arXiv:2505.03966 (2025). Submitted to AAAI.
+          <u>Xin Wang</u>, Feilong Wang, Yuan Hong, R. Tyrrell Rockafellar, Xuegang(Jeff) Ban. arXiv:2505.03966 (2025). Submitted to AAAI.
         </li>
 
         <li><span class="tag badge-app">Transportation</span></li>
         <li>
           <strong>Data poisoning attacks on traffic state estimation and prediction</strong>
           <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24000986" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          Wang, Feilong, <u>Xin Wang</u>, Hong, Yuan, Rockafellar, R. Tyrrell, Ban, Xuegang Jeff. Transportation Research Part C, 168 (2024): 104577.
+          Feilong Wang, <u>Xin Wang</u>, Yuan Hong, Rockafellar, R. Tyrrell, Xuegang(Jeff) Ban. Transportation Research Part C, 168 (2024): 104577.
         </li>
         <li>
           <strong>Data poisoning attacks in intelligent transportation systems: A survey</strong>
           <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24002717" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          Wang, Feilong, <u>Xin Wang</u>, Ban, Xuegang Jeff. Transportation Research Part C, 165 (2024): 104750.
+          Feilong Wang, <u>Xin Wang</u>,Xuegang(Jeff) Ban. Transportation Research Part C, 165 (2024): 104750.
         </li>
         <li>
           <strong>Infrastructure-enabled Defense Methods against Data Poisoning Attacks on Traffic State Estimation and Prediction</strong>
-          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4395716" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br><u>Xin Wang</u>, Jeff Ban. TRC-30, 2025.
+          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4395716" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>Feilong Wang, <u>Xin Wang</u>, Yuan Hong, Xuegang(Jeff) Ban. TRC-30, 2025.
         </li>
         <li>
           <strong>Transferability in Data Poisoning Attacks on Spatiotemporal Traffic Forecasting Models</strong>
           <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4827065" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, Feilong Wang, Yuan Hong, Xuegang Ban. SSRN 4827065 (2024). Submitted to TR-C.
+          <u>Xin Wang</u>, Feilong Wang, Yuan Hong, Xuegang(Jeff) Ban. SSRN 4827065 (2024). Submitted to TR-C.
         </li>
 
       </ul>
