--- a/index.html
+++ b/index.html
@@ -209,49 +209,58 @@
 
     <!-- Publications -->
     <section class="card">
-      <h3>Publications</h3>
-      <ul class="list small pub">
+  <h3>Publications</h3>
+  <ul class="list small pub">
 
-        <li><span class="tag badge-ai">AI</span></li>
-        <li>
-          <strong>Set-Valued Sensitivity Analysis of Deep Neural Networks</strong>
-          <a href="https://arxiv.org/abs/2412.11057" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, Feilong Wang, Xuegang(Jeff) Ban. AAAI 2025, 39(20): 21304–21311.
-        </li>
-        <li>
-          <strong>Machine Unlearning of Traffic State Estimation and Prediction</strong>
-          <a href="https://arxiv.org/abs/2507.17984" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, R. Tyrrell Rockafellar, Xuegang(Jeff) Ban. arXiv:2507.17984 (2025). Submitted to ISTTT.
-        </li>
-        <li>
-          <strong>Model-Targeted Data Poisoning Attacks against ITS Applications with Provable Convergence</strong>
-          <a href="https://arxiv.org/abs/2505.03966" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, Feilong Wang, Yuan Hong, R. Tyrrell Rockafellar, Xuegang(Jeff) Ban. arXiv:2505.03966 (2025). Submitted to AAAI.
-        </li>
+    <li><span class="tag badge-ai">AI</span></li>
+    <li>
+      <strong>Set-Valued Sensitivity Analysis of Deep Neural Networks</strong>
+      <a href="https://arxiv.org/abs/2412.11057" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+      <u>Xin Wang</u>, Feilong Wang, Xuegang (Jeff) Ban<br>
+      AAAI 2025, 39(20): 21304–21311
+    </li>
+    <li>
+      <strong>Machine Unlearning of Traffic State Estimation and Prediction</strong>
+      <a href="https://arxiv.org/abs/2507.17984" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+      <u>Xin Wang</u>, R. Tyrrell Rockafellar, Xuegang (Jeff) Ban<br>
+      arXiv:2507.17984 (2025). Submitted to ISTTT
+    </li>
+    <li>
+      <strong>Model-Targeted Data Poisoning Attacks against ITS Applications with Provable Convergence</strong>
+      <a href="https://arxiv.org/abs/2505.03966" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+      <u>Xin Wang</u>, Feilong Wang, Yuan Hong, R. Tyrrell Rockafellar, Xuegang (Jeff) Ban<br>
+      arXiv:2505.03966 (2025). Submitted to AAAI
+    </li>
 
-        <li><span class="tag badge-app">Transportation</span></li>
-        <li>
-          <strong>Data poisoning attacks on traffic state estimation and prediction</strong>
-          <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24000986" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          Feilong Wang, <u>Xin Wang</u>, Yuan Hong, Rockafellar, R. Tyrrell, Xuegang(Jeff) Ban. Transportation Research Part C, 168 (2024): 104577.
-        </li>
-        <li>
-          <strong>Data poisoning attacks in intelligent transportation systems: A survey</strong>
-          <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24002717" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          Feilong Wang, <u>Xin Wang</u>,Xuegang(Jeff) Ban. Transportation Research Part C, 165 (2024): 104750.
-        </li>
-        <li>
-          <strong>Infrastructure-enabled Defense Methods against Data Poisoning Attacks on Traffic State Estimation and Prediction</strong>
-          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4395716" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>Feilong Wang, <u>Xin Wang</u>, Yuan Hong, Xuegang(Jeff) Ban. TRC-30, 2025.
-        </li>
-        <li>
-          <strong>Transferability in Data Poisoning Attacks on Spatiotemporal Traffic Forecasting Models</strong>
-          <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4827065" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
-          <u>Xin Wang</u>, Feilong Wang, Yuan Hong, Xuegang(Jeff) Ban. SSRN 4827065 (2024). Submitted to TR-C.
-        </li>
+    <li><span class="tag badge-app">Transportation</span></li>
+    <li>
+      <strong>Data poisoning attacks on traffic state estimation and prediction</strong>
+      <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24000986" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+      Feilong Wang, <u>Xin Wang</u>, Yuan Hong, R. Tyrrell Rockafellar, Xuegang (Jeff) Ban<br>
+      Transportation Research Part C, 168 (2024): 104577
+    </li>
+    <li>
+      <strong>Data poisoning attacks in intelligent transportation systems: A survey</strong>
+      <a href="https://www.sciencedirect.com/science/article/abs/pii/S0968090X24002717" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+      Feilong Wang, <u>Xin Wang</u>, Xuegang (Jeff) Ban<br>
+      Transportation Research Part C, 165 (2024): 104750
+    </li>
+    <li>
+      <strong>Infrastructure-enabled Defense Methods against Data Poisoning Attacks on Traffic State Estimation and Prediction</strong>
+      <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4395716" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+      Feilong Wang, <u>Xin Wang</u>, Yuan Hong, Xuegang (Jeff) Ban<br>
+      TRC-30, 2025
+    </li>
+    <li>
+      <strong>Transferability in Data Poisoning Attacks on Spatiotemporal Traffic Forecasting Models</strong>
+      <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4827065" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
+      <u>Xin Wang</u>, Feilong Wang, Yuan Hong, Xuegang (Jeff) Ban<br>
+      SSRN 4827065 (2024). Submitted to TR-C
+    </li>
 
-      </ul>
-    </section>
+  </ul>
+</section>
+
 
     <!-- Talks -->
     <section class="card">
