--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section id="about" class="card">
       <h3>About</h3>
       <p class="small">
-        My research focuses on making <strong>AI safer and more reliablee</strong>, enabling trustworthy AI deployment in  <strong>safety-critical transportation applications</strong>, for example:
+        My research focuses on making <strong>AI safer and more reliable</strong>, enabling trustworthy AI deployment in  <strong>safety-critical transportation applications</strong>, for example:
       </p>
       <ul class="small">
         <li><strong>AI Stability</strong> — How can small changes in data or settings 
