--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         <h3 style="margin-top:18px">Experience</h3>
         <ul class="list small">
           <li><strong>Research Assistant</strong>, University of Washington, 2022—present</li>
+           <li><strong>Teaching Assistant</strong>, CET 513: Optimization in Transportation (Autumn 2025)</li>
           <li><strong>Teaching Assistant</strong>, CET 513: Optimization in Transportation (Autumn 2024)</li>
           <li><strong>ML Engineer Intern</strong>, Baidu Inc., Jan–May 2021 — Multi-objective ranking (PE-LTR, NSGA-II) improving NDCG and CTR</li>
         </ul>
