--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <strong>Machine Unlearning of Traffic State Estimation and Prediction</strong>
       <a href="https://arxiv.org/abs/2507.17984" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
       <u>Xin Wang</u>, R. Tyrrell Rockafellar, Xuegang (Jeff) Ban<br>
-      arXiv:2507.17984 (2025). Submitted to ISTTT
+      arXiv:2507.17984 (2025).
     </li>
     <li>
       <strong>Model-Targeted Data Poisoning Attacks against ITS Applications with Provable Convergence</strong>
@@ -256,7 +256,7 @@
       <strong>Transferability in Data Poisoning Attacks on Spatiotemporal Traffic Forecasting Models</strong>
       <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4827065" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
       <u>Xin Wang</u>, Feilong Wang, Yuan Hong, Xuegang (Jeff) Ban<br>
-      SSRN 4827065 (2024). Submitted to TR-C
+      Transportation Research Part C, 183 (2026): 105501
     </li>
 
   </ul>
