--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
       <strong>Model-Targeted Data Poisoning Attacks against ITS Applications with Provable Convergence</strong>
       <a href="https://arxiv.org/abs/2505.03966" target="_blank" rel="noopener"><span class="tag badge-paper">Paper</span></a><br>
       <u>Xin Wang</u>, Feilong Wang, Yuan Hong, R. Tyrrell Rockafellar, Xuegang (Jeff) Ban<br>
-      arXiv:2505.03966 (2025). Submitted to AAAI
+      arXiv:2505.03966 (2025). 
     </li>
 
     <li><span class="tag badge-app">Transportation</span></li>
