--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <body>
   <div class="wrap">
     <header>
-      <img src="bio.jpeg" alt="Xin Wang" class="avatar">
+      <img src="IMG_0426.jpeg" alt="Xin Wang" class="avatar">
       <div class="title">
         <h1>Xin Wang</h1>
         <h2>Ph.D. Student, Transportation Engineering — University of Washington</h2>
