--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             xinw22@uw.edu
           </a>
           <a class="pill" href="https://scholar.google.com/citations?user=eNRwi3QAAAAJ" target="_blank" rel="noopener">📖 Google Scholar</a>
-          <a class="pill" href="CV_Xin_Feb2026.pdf" target="_blank" rel="noopener">📄 Download CV</a>
+          <a class="pill" href="CV_Xin.pdf" target="_blank" rel="noopener">📄 Download CV</a>
         </div>
       </div>
     </header>
